# cfdi

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
erpnext_mexico_compliance/: commands.py  hooks.py
erpnext_mexico_compliance/config/: desktop.py
erpnext_mexico_compliance/controllers/: common.py
erpnext_mexico_compliance/desktop_icon/: mexico_compliance.json
erpnext_mexico_compliance/erpnext_mexico_compliance/: sat_catalogs.py
erpnext_mexico_compliance/erpnext_mexico_compliance/doctype/cfdi_stamping_settings/: cfdi_stamping_settings.js  cfdi_stamping_settings.json  cfdi_stamping_settings.py
erpnext_mexico_compliance/erpnext_mexico_compliance/doctype/digital_signing_certificate/: digital_signing_certificate.py
erpnext_mexico_compliance/erpnext_mexico_compliance/doctype/sat_payment_method/: sat_payment_method.json  sat_payment_method.py
erpnext_mexico_compliance/erpnext_mexico_compliance/doctype/sat_payment_option/: sat_payment_option.json  sat_payment_option.py
erpnext_mexico_compliance/erpnext_mexico_compliance/doctype/sat_postal_code/: sat_postal_code.json  sat_postal_code.py
erpnext_mexico_compliance/erpnext_mexico_compliance/workspace/mexico_compliance/: mexico_compliance.json
erpnext_mexico_compliance/fixtures/: custom_field.json  property_setter.json
erpnext_mexico_compliance/overrides/: payment_entry.py  sales_invoice.py
erpnext_mexico_compliance/scripts/: link_payment_methods.py
erpnext_mexico_compliance/utils/: permissions.py
erpnext_mexico_compliance/workspace_sidebar/: mexico_compliance.json
erpnext_mexico_compliance/ws_client/: __init__.py  finkok_client.py
