[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nomina_mexico"
authors = [
    { name = "chavadoor", email = "info@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "license.txt"}
dependencies = ["python-dateutil"]
version = "1.0.0"
description = "Módulo de Nómina México para ERPNext v16 + Frappe HRMS v16"

[project.urls]
Homepage = "https://github.com/chavadoor/nomina_mexico"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"
hrms = ">=16.0.0,<17.0.0"
