[project]
name = "erpnext_mexico_compliance"
authors = [{ name = "TI Sin Problemas", email = "info@tisinproblemas.com" }]
description = "ERPNext app to serve as base to comply with help with Mexican Rules and Regulations"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]
dependencies = ["satcfdi==4.9.9", "lxml==6.0.4"]

[project.urls]
Homepage = "https://tisinproblemas.com/mexico-compliance"
Repository = "https://github.com/TI-Sin-Problemas/erpnext_mexico_compliance.git"
"Bug Reports" = "https://github.com/TI-Sin-Problemas/erpnext_mexico_compliance/issues"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017", "B018", "B023", "B904",
    "E101", "E402", "E501", "E741",
    "F401", "F403", "F405", "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
